# pciutils

./: meson.build  meson_options.txt
lib/: meson.build
